--- a/rhpam-config/7.13.1/envs/rhdm-authoring-ha.yaml
+++ b/rhpam-config/7.13.1/envs/rhdm-authoring-ha.yaml
@@ -86,10 +86,24 @@ others:
             spec:
               containers:
                 - env:
+                    #[[if not .Console.DataGridAuth.SecretDatagridCredentials]]
                     - name: USER
                       value: "[[.Console.DataGridAuth.Username]]"
                     - name: PASS
                       value: "[[.Console.DataGridAuth.Password]]"
+                    #[[end]]
+                    #[[if .Console.DataGridAuth.SecretDatagridCredentials]]
+                    - name: USER
+                      valueFrom:
+                        secretKeyRef:
+                          name: "[[.Console.DataGridAuth.SecretDatagridCredentials]]"
+                          key: username
+                    - name: PASS
+                      valueFrom:
+                        secretKeyRef:
+                          name: "[[.Console.DataGridAuth.SecretDatagridCredentials]]"
+                          key: password
+                    #[[end]]
                     - name: SERVICE_NAME
                       value: "[[.ApplicationName]]-datagrid"
                     - name: SERVICE_PROFILE
@@ -201,8 +215,17 @@ others:
                 - env:
                     - name: AMQ_USER
                       value: "jmsBrokerUser"
+                    #[[if not .SecretAMQPassword]]
                     - name: AMQ_PASSWORD
                       value: "[[.AMQPassword]]"
+                    #[[end]]
+                    #[[if .SecretAMQPassword]]
+                    - name: AMQ_PASSWORD
+                      valueFrom:
+                        secretKeyRef:
+                          name: "[[.SecretAMQPassword]]"
+                          key: password
+                    #[[end]]
                     - name: AMQ_ROLE
                       value: admin
                     - name: AMQ_NAME
@@ -222,8 +245,17 @@ others:
                       value: "0"
                     - name: AMQ_CLUSTER_USER
                       value: "jmsBrokerUser"
+                    #[[if not .SecretAMQClusterPassword]]
                     - name: AMQ_CLUSTER_PASSWORD
                       value: "[[.AMQClusterPassword]]"
+                    #[[end]]
+                    #[[if .SecretAMQClusterPassword]]
+                    - name: AMQ_CLUSTER_PASSWORD
+                      valueFrom:
+                        secretKeyRef:
+                          name: "[[.SecretAMQClusterPassword]]"
+                          key: password
+                    #[[end]]
                     - name: OPENSHIFT_DNS_PING_SERVICE_NAME
                       value: "[[.ApplicationName]]-amq-ping"
                     - name: AMQ_EXTRA_ARGS
