--- a/deploy/olm-catalog/dev/7.13.1-1/manifests/kieapp.crd.yaml
+++ b/deploy/olm-catalog/dev/7.13.1-1/manifests/kieapp.crd.yaml
@@ -194,6 +194,12 @@ spec:
                           searches.
                         format: int32
                         type: integer
+                      secretBindCredential:
+                        description: Name of the secret containing BindCredential,
+                          credentials instead of plain BindCredentials, if isn't found
+                          will be created, the secret will use the BindCredential
+                          provided otherwise a generated BindCredential will be used
+                        type: string
                       url:
                         description: LDAP endpoint to connect for authentication.
                           For failover set two or more LDAP endpoints separated by
@@ -356,6 +362,34 @@ spec:
                       the keys are username and password, if the adminUser and adminPassword
                       are provided the secretAdminCredentials will be skipped
                     type: string
+                  secretAmqClusterPassword:
+                    description: Name of the secret containing AMQCluster's password,
+                      if provided a secret with the secret name is used instead of
+                      a plain password, if isn't found will be created, the secret
+                      will use the password provided otherwise a generated password
+                      will be used
+                    type: string
+                  secretAmqPassword:
+                    description: Name of the secret containing AMQ's password, if
+                      provided a secret with the secret name is used instead of a
+                      plain password, if isn't found will be created, the secret will
+                      use the password provided otherwise a generated password will
+                      be used
+                    type: string
+                  secretDBPassword:
+                    description: Name of the secret containing Database's password,
+                      if provided a secret with the secret name is used instead of
+                      a plain password, if isn't found will be created, the secret
+                      will use the password provided otherwise a generated password
+                      will be used
+                    type: string
+                  secretKeyStorePassword:
+                    description: Name of the secret containing Keystore's password,
+                      if provided a secret with the secret name is used instead of
+                      a plain password, if isn't found will be created, the secret
+                      will use the password provided otherwise a generated password
+                      will be used
+                    type: string
                   startupStrategy:
                     description: Startup strategy for Console and Kieserver
                     properties:
@@ -469,6 +503,13 @@ spec:
                           password:
                             description: The password to use for datagrid user
                             format: password
+                            type: string
+                          secretDatagridCredentials:
+                            description: Name of the secret containing Datagrid Authentication
+                              credentials instead of plain username and password,
+                              if isn't found will be created, the secret will use
+                              the password provided otherwise a generated password
+                              will be used
                             type: string
                           username:
                             description: The user to use for datagrid
@@ -3160,6 +3201,13 @@ spec:
                               searches.
                             format: int32
                             type: integer
+                          secretBindCredential:
+                            description: Name of the secret containing BindCredential,
+                              credentials instead of plain BindCredentials, if isn't
+                              found will be created, the secret will use the BindCredential
+                              provided otherwise a generated BindCredential will be
+                              used
+                            type: string
                           url:
                             description: LDAP endpoint to connect for authentication.
                               For failover set two or more LDAP endpoints separated
@@ -3329,6 +3377,34 @@ spec:
                           adminPassword are provided the secretAdminCredentials will
                           be skipped
                         type: string
+                      secretAmqClusterPassword:
+                        description: Name of the secret containing AMQCluster's password,
+                          if provided a secret with the secret name is used instead
+                          of a plain password, if isn't found will be created, the
+                          secret will use the password provided otherwise a generated
+                          password will be used
+                        type: string
+                      secretAmqPassword:
+                        description: Name of the secret containing AMQ's password,
+                          if provided a secret with the secret name is used instead
+                          of a plain password, if isn't found will be created, the
+                          secret will use the password provided otherwise a generated
+                          password will be used
+                        type: string
+                      secretDBPassword:
+                        description: Name of the secret containing Database's password,
+                          if provided a secret with the secret name is used instead
+                          of a plain password, if isn't found will be created, the
+                          secret will use the password provided otherwise a generated
+                          password will be used
+                        type: string
+                      secretKeyStorePassword:
+                        description: Name of the secret containing Keystore's password,
+                          if provided a secret with the secret name is used instead
+                          of a plain password, if isn't found will be created, the
+                          secret will use the password provided otherwise a generated
+                          password will be used
+                        type: string
                       startupStrategy:
                         description: Startup strategy for Console and Kieserver
                         properties:
@@ -3442,6 +3518,13 @@ spec:
                               password:
                                 description: The password to use for datagrid user
                                 format: password
+                                type: string
+                              secretDatagridCredentials:
+                                description: Name of the secret containing Datagrid
+                                  Authentication credentials instead of plain username
+                                  and password, if isn't found will be created, the
+                                  secret will use the password provided otherwise
+                                  a generated password will be used
                                 type: string
                               username:
                                 description: The user to use for datagrid
