--- a/rhpam-config/7.13.1/dbs/servers/h2.yaml
+++ b/rhpam-config/7.13.1/dbs/servers/h2.yaml
@@ -29,8 +29,17 @@ servers:
                       value: "org.hibernate.dialect.H2Dialect"
                     - name: RHPAM_USERNAME
                       value: "rhpam"
+                    #[[if not $.SecretDBPassword]]
                     - name: RHPAM_PASSWORD
                       value: "[[$.DBPassword]]"
+                    #[[end]]
+                    #[[if $.SecretDBPassword]]
+                    - name: RHPAM_PASSWORD
+                      valueFrom:
+                        secretKeyRef:
+                          name: "[[$.SecretDBPassword]]"
+                          key: password
+                    #[[end]]
                     - name: RHPAM_SERVICE_HOST
                       value: "dummy_ignored"
                     - name: RHPAM_SERVICE_PORT
