--- a/rhpam-config/7.13.1/dbs/servers/postgresql.yaml
+++ b/rhpam-config/7.13.1/dbs/servers/postgresql.yaml
@@ -41,8 +41,17 @@ servers:
                       value: "org.hibernate.dialect.PostgreSQLDialect"
                     - name: RHPAM_USERNAME
                       value: "rhpam"
+                    #[[if not $.SecretDBPassword]]
                     - name: RHPAM_PASSWORD
                       value: "[[$.DBPassword]]"
+                    #[[end]]
+                    #[[if $.SecretDBPassword]]
+                    - name: RHPAM_PASSWORD
+                      valueFrom:
+                        secretKeyRef:
+                          name: "[[$.SecretDBPassword]]"
+                          key: password
+                    #[[end]]
                     - name: RHPAM_SERVICE_HOST
                       value: "[[.KieName]]-postgresql"
                     - name: RHPAM_SERVICE_PORT
