--- a/deploy/olm-catalog/test/7.13.1-1/manifests/businessautomation-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/test/7.13.1-1/manifests/businessautomation-operator.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "true"
     containerImage: registry-proxy.engineering.redhat.com/rh-osbs/rhpam-7-rhpam-rhel8-operator:7.13.1
-    createdAt: "2022-04-20 18:15:39"
+    createdAt: "2022-05-31 15:00:04"
     description: Deploys and manages Red Hat Process Automation Manager and Red Hat
       Decision Manager environments.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
@@ -20,7 +20,7 @@ metadata:
     operator-businessautomation: "true"
     operatorframework.io/arch.amd64: supported
     operatorframework.io/os.linux: supported
-  name: businessautomation-operator.7.13.1-1-dev-fvd9kbjvv7
+  name: businessautomation-operator.7.13.1-1-dev-j5l6lldt8t
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -402,7 +402,7 @@ spec:
   - operator
   labels:
     alm-owner-businessautomation: businessautomation-operator
-    operated-by: businessautomation-operator.7.13.1-1-dev-fvd9kbjvv7
+    operated-by: businessautomation-operator.7.13.1-1-dev-j5l6lldt8t
   links:
   - name: Product Page
     url: https://access.redhat.com/products/red-hat-process-automation-manager
@@ -418,5 +418,5 @@ spec:
   selector:
     matchLabels:
       alm-owner-businessautomation: businessautomation-operator
-      operated-by: businessautomation-operator.7.13.1-1-dev-fvd9kbjvv7
-  version: 7.13.1-1+fvd9kbjvv7
+      operated-by: businessautomation-operator.7.13.1-1-dev-j5l6lldt8t
+  version: 7.13.1-1+j5l6lldt8t
