--- a/deploy/role_binding.yaml
+++ b/deploy/role_binding.yaml
@@ -1,10 +1,12 @@
-kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
 metadata:
-  name: kie-cloud-operator
+  name: business-automation-operator
 roleRef:
+  apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: kie-cloud-operator
+  name: business-automation-operator
 subjects:
-  - kind: ServiceAccount
-    name: kie-cloud-operator
+- apiGroup: rbac.authorization.k8s.io
+  kind: ServiceAccount
+  name: business-automation-operator
